--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Voting App</title>
@@ -11,12 +12,9 @@
 			<br/>
 			<div class="btn-container">
 				<button type="submit" class="btn btn-add">CLICK ME!</button>
-				<button class="btn btn-delte">RESET</button>
+				<button class="btn btn-delete">RESET</button>
 			</div>
 		</div>
-
-		<script type="text/javascript" src="../app/controllers/clickController.client.js"></script>
+		<script type="text/javascript" src="/controllers/clickController.client.js"></script>
 	</body>
-	<script type="text/javascript" src="/app/controllers/asdf.js"></script>
-
 </html>
