--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Voting App</title>
 	</head>
 	<body>
-		<div class="container">
-			<p class="clementine-text">Clementine.js</p>
-		</div>
-		<div class="container">
-			<p>You have clicked the button <span id="click-nbr"></span> times</p>
-			<br/>
-			<div class="btn-container">
-				<button type="submit" class="btn btn-add">CLICK ME!</button>
-				<button class="btn btn-delete">RESET</button>
-			</div>
-		</div>
-		<script type="text/javascript" src="/controllers/clickController.client.js"></script>
+		<div id="app"></div>
+		<script type="text/javascript" src="./build.js"></script>
 	</body>
 </html>
